--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a:hover {
     display: flex;
     color: #f9faf8;
     background-color: #1f2937;
-    padding: 20px 50px 20px 50px;
+    padding: 20px 50px 0px 50px;
     align-items: center;
 }
 
@@ -49,7 +49,7 @@ a:hover {
     color: #f9faf8;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 10px 50px 75px 50px;
     gap: 50px;    
 }
 
@@ -78,6 +78,10 @@ a:hover {
     font-weight: 1000;
     border: 0px;
     border-radius: 7.5px;
+}
+
+.sign-up-button:hover {
+    background-color: #176cf5;
 }
 
 .pepe {
@@ -119,3 +123,79 @@ a:hover {
     font-size: 18px;
     color: #77787c
 }
+
+/* QUOTE SECTION */
+.quote {
+    display: flex;
+    flex-direction: column;
+    background: #E5E7EB;
+    padding: 100px 200px 100px 200px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+    text-align: left;  
+}
+
+.quote-author {
+    font-size: 18px;
+    font-weight: 1000;
+    margin-left: auto;
+    color: #10161d;
+}
+
+/* ACTION SECTION */
+.action {
+    padding: 100px;
+}
+
+.action-container {
+    background-color: #3882F6;
+    color: white;
+    display: flex;
+    text-align: left;
+    padding: 50px 100px 50px 100px;
+    border-radius: 7.5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.action-container .text-title {
+    font-size: 24px;
+    font-weight: 1000;
+    color: #f9faf8
+}
+
+.sign-up-button-inverted {
+    margin-left: auto;
+    width: 120px;
+    height: 30px;
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: 1000;
+    border-style: solid;
+    border-color: white;
+    border-width: 1x;
+    border-radius: 7.5px;
+}
+
+.footer {
+    color:#E5E7EB;
+    background: #1f2937;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+/* .odin-credit {
+    color: black;
+    text-decoration: black;
+    cursor: pointer;
+}
+
+.odin-credit:hover {
+    color: gray;
+    
+} */
