--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ a:hover {
 .container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 /* HEADER/NAVBAR SECTION */
