--- a/style.css
+++ b/style.css
@@ -188,15 +188,7 @@ a:hover {
     background: #1f2937;
     padding-top: 50px;
     padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
-
-/* .odin-credit {
-    color: black;
-    text-decoration: black;
-    cursor: pointer;
-}
-
-.odin-credit:hover {
-    color: gray;
-    
-} */
